# epoll_web

./: CMakeLists.txt  README.md  rename.sh
.github/workflows/: linux.yml  release.yml
cmake/: compiler_definitions.cmake  compiler_options.cmake  options.cmake  package.cmake  print_info.cmake
cmake/modules/: FindNCURSES.cmake
src/: CMakeLists.txt  client.c  client.cpp  main.cpp  server.c  server.cpp  test.c  test.cpp
src/common/: CMakeLists.txt
src/common/include/epoll_learn/common/: common.h
src/common/include/epoll_web/common/: check_error.hpp  common.h  common.hpp  literals.hpp  log.hpp  string_convert.hpp  util.hpp  utils.h
src/common/src/: common.c  get_hardware_concurrency.c  log.cpp  utils.c
src/game/: CMakeLists.txt
src/game/include/epoll_web/game/: game.hpp  snack.hpp  snake.hpp
src/game/src/: game.cpp
src/network/: CMakeLists.txt
src/network/include/epoll_learn/network/: client1.h  server1.h
src/network/include/epoll_web/network/: Address.hpp  Epoll.hpp  Socket.hpp  client.hpp  client1.h  client1.hpp  server.hpp  server1.h  server1.hpp  server2.h  server2.hpp  server3.h  server3.hpp
src/network/src/: client1.c  server1.c  server2.c  server3.c
